--- a/css/main.css
+++ b/css/main.css
@@ -29,12 +29,12 @@ body {
   color: var(--theme-green-1);
 }
 
-p a {
+.ui.decorated.item {
   color: inherit;
   text-decoration: underline;
 }
 
-p a:hover {
+.ui.decorated.item:hover {
   color: var(--theme-black);
   text-decoration: underline;
 }
